--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,13 +24,16 @@
    </thead>
    <tbody class="govuk-table__body">
 
+
+
      <tr class="govuk-table__row">
          <th class="govuk-table__header" scope="row">Ready Salted 1.8.6<p>07/02/2020</p></th>
          <td class="govuk-table__cell ">
-           <p>Prototype - in progress 07/02/2020</p>
+           <p>Prototype - in progress 12/02/2020</p>
            <ul class="govuk-list govuk-list--bullet">
-             <li><a href="1-8-5/upload-reports">Providers</a> added section to manage providers</li>
-             <li><a href="1-8-5/email-dist">Updated Dashboard</a> removed Home and added </li>
+             <li><a href="1-8-6/search-providers">Providers</a> section added to manage providers</li>
+             <li><a href="1-8-6/dashboard">Removed Home </a> link from primary navigation and added providers link  </li>
+             <li><a href="1-8-6/dashboard">Updated Dashboard</a> added bar charts representation of Queues, Topics and ILR </li>
            </ul>
          </td>
          <td class="govuk-table__cell "><a href="#">Contents</a></td>
