Updated scripts.html removing remove jquery access link
Updated scripts.html removing remove jquery access link

--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -4,10 +4,11 @@
 <script src="/public/javascripts/application.js"></script>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script> -->
 
-<script src="/public/javascripts/barchart.js"></script>
-
+<!-- <script src="/public/javascripts/barchart.js"></script> -->
+<script src="/public/javascripts/Chart.js"></script>
+<script src="/public/javascripts/utils.js"></script>
 <!-- <script src="assets/javascripts/tt.js"></script> -->
 
 {% if useAutoStoreData %}
