Operations - Provider prototype updates
Updated operations prototype modifitying provider section

--- a/app/views/1-8-6/add-new-provider.html
+++ b/app/views/1-8-6/add-new-provider.html
@@ -16,7 +16,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-       <h1 class="govuk-heading-xl">Add a single provider or multiple providers?</h1>
+       <h1 class="govuk-heading-xl">Add a single provider or multiple providers/collection assignments?</h1>
 
 
       <div class="govuk-form-group">
@@ -33,7 +33,7 @@
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
           <label class="govuk-label govuk-radios__label" for="changed-name-2">
-            Add multiple providers
+            Add multiple providers/collection assignments
           </label>
         </div>
       </div>
