--- a/app/views/1-8-6/dashboard.html
+++ b/app/views/1-8-6/dashboard.html
@@ -14,7 +14,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <span class="govuk-heading-s govuk-!-font-size-27 white-text">Search for a provider</span>
-      <form class="govuk-form-group" action="provider-record">
+      <form class="govuk-form-group" action="manage-provider">
         <!-- <input class="govuk-input" id="name" name="name" type="text" placeholder="e.g. Manchester or 123456"> -->
         <div id="tt-overlay" class="autocomplete-wrapper"></div>
         <button id="searchProviders" type="search" class="govuk-button" ><img src="https://assets.publishing.service.gov.uk/frontend/govuk_publishing_components/search-button-ca89b2a79f944909ceb7370d3f0b78811d32b96e883348fcd8886f63dd619585.png"></img></button>
@@ -182,8 +182,8 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-third">
     <div class="border-top">
-      <h2 class="govuk-heading-m"><a class="" href="#">Today</a></h2>
-      <span class="govuk-heading-l no-margin-bottom">40</span>
+      <h2 class="govuk-heading-m"><a class="" href="#">Current period</a></h2>
+      <span class="govuk-heading-l no-margin-bottom">18936</span>
       <!-- <span class="govuk-body-s">Expected reports not generated</span> -->
     </div>
   </div>
@@ -198,8 +198,8 @@
 
   <div class="govuk-grid-column-one-third">
     <div class="border-top ">
-      <h2 class="govuk-heading-m"><a class="" href="#">Jobs on hold</a></h2>
-      <span class="govuk-heading-l no-margin-bottom">18</span>
+      <h2 class="govuk-heading-m"><a class="" href="#">Last 5 minutes</a></h2>
+      <span class="govuk-heading-l no-margin-bottom">5</span>
       <!-- <span class="govuk-body-s">51 jobs on hold</span> -->
     </div>
   </div>
