--- a/app/views/1-8-6/provider-manage-assignments.html
+++ b/app/views/1-8-6/provider-manage-assignments.html
@@ -19,8 +19,8 @@
 <br>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-       <h1 class="govuk-heading-xl">Manage assignments <span class="govuk-caption-l">University of Wolverhampton, 10007166</span></h1>
+      <h2 class="govuk-caption-xl">University of Wolverhampton, 10007166</span></h2>
+       <h1 class="govuk-heading-xl">Manage assignments </h1>
 
        <!-- <p class="assignment-links"><a class="govuk-link" href="#">Submit another file</a> <a class="govuk-link" href="#">Manage assignments</a> <a class="govuk-link" href="#">Amend Provider name</a></p> -->
   </div>
@@ -38,26 +38,68 @@
         <th class="govuk-table__cell">Start date</th>
         <th class="govuk-table__cell">End date</th>
       </tr>
+      <!-- <tr class="govuk-table__row">
+        <td class="govuk-table__cell">1890-Final</td>
+        <td class="govuk-table__cell">
+          <input class="govuk-input govuk-input--width-10" id="width-10" name="1890-Final-start-date" type="date" value="" placeholder="DD/MM/YYYY">
+        <td class="govuk-table__cell">
+          <input class="govuk-input govuk-input--width-10" id="width-10" name="1890-Final-end-date" type="date" value="" placeholder="DD/MM/YYYY">
+      </tr>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">1890-YearEnd</td>
+        <td class="govuk-table__cell">
+          <input class="govuk-input govuk-input--width-10" id="width-10" name="1890-YearEnd-start-date" type="date" value="" placeholder="DD/MM/YYYY">
+        </td>
+        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="1890-YearEnd-end-date"  type="date" value="" placeholder="DD/MM/YYYY"></td>
+      </tr> -->
       <tr class="govuk-table__row">
         <td class="govuk-table__cell">IRL1920</td>
         <td class="govuk-table__cell">
-          <input class="govuk-input govuk-input--width-10" id="width-10" name="IRL1920-start-date" type="text" placeholder="mm/dd/yyyy" ></td>
-        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="IRL1920-end-date" type="text" placeholder="mm/dd/yyyy"></td>
+          <input class="govuk-input govuk-input--width-10" id="width-10" name="IRL1920-start-date" type="date" value="" placeholder="DD/MM/YYYY">
+        </td>
+        <td class="govuk-table__cell">
+          <input class="govuk-input govuk-input--width-10" type="date" id="date3" name="IRL1920-end-date" value="" placeholder="DD/MM/YYYY">
+        </td>
       </tr>
       <tr class="govuk-table__row">
         <td class="govuk-table__cell" scope="row">EAS1920</td>
-        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="EAS1920-start-date" type="text" placeholder="mm/dd/yyyy"></td>
-        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="EAS1920-end-date" type="text" placeholder="mm/dd/yyyy"></td>
+        <td class="govuk-table__cell">
+          <input class="govuk-input govuk-input--width-10" id="width-10" name="EAS1920-start-date" type="date" value="" placeholder="DD/MM/YYYY">
+        <td class="govuk-table__cell">
+          <input class="govuk-input govuk-input--width-10" id="width-10" name="EAS1920-end-date" type="date" value="" placeholder="DD/MM/YYYY">
       </tr>
       <tr class="govuk-table__row">
         <td class="govuk-table__cell">ESFR2-1920</td>
-        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="ESFR2-1920-start-date" type="text" placeholder="mm/dd/yyyy"></td>
-        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="ESFR2-1920-end-date" type="text" placeholder="mm/dd/yyyy"></td>
+        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="ESFR2-1920-start-date" type="date" value="" placeholder="DD/MM/YYYY"></td>
+        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="ESFR2-1920-end-date" type="date" value="" placeholder="DD/MM/YYYY"></td>
+      </tr>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">1920-MidYear</td>
+        <td class="govuk-table__cell">
+          <input class="govuk-input govuk-input--width-10" id="width-10" name="1920-MidYear-start-date" type="date" value="" placeholder="DD/MM/YYYY"></td>
+        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="1920-MidYear-end-date" type="date" value="" placeholder="DD/MM/YYYY"></td>
+      </tr>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">NCS1920</td>
+        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="NCS1920-start-date" type="date" value="" placeholder="DD/MM/YYYY"></td>
+        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="NCS1920-end-date" type="date" value="" placeholder="DD/MM/YYYY"></td>
       </tr>
       <tr class="govuk-table__row">
         <td class="govuk-table__cell">FRM-reports1920</td>
-        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="FRM-reports1920-start-date" type="text" placeholder="mm/dd/yyyy"></td>
-        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="FRM-reports1920-end-date" type="text" placeholder="mm/dd/yyyy"></td>
+        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="FRM-reports1920-start-date"  type="date" value="" placeholder="DD/MM/YYYY"></td>
+        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="FRM-reports1920-end-date"  type="date" value="" placeholder="DD/MM/YYYY"></td>
+      </tr>
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell">OP-Validation-Report</td>
+        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="OP-Validation-Report-start-date"  type="date" value="" placeholder="DD/MM/YYYY"></td>
+        <td class="govuk-table__cell"><input class="govuk-input govuk-input--width-10" id="width-10" name="OP-Validation-Report-end-date"  type="date" value="" placeholder="DD/MM/YYYY"></td>
+      </tr>
+    </tbody>
+
+    <tbody>
+      <tr>
+        <td></td>
+        <td class="govuk-!-font-size-14 govuk-border-colour govuk-table__cell--numeric" colspan="2">Null value will default to '2600-07-31'</td>
       </tr>
     </tbody>
   </table>
