--- a/app/views/1-8-6/includes/nav.html
+++ b/app/views/1-8-6/includes/nav.html
@@ -2,7 +2,7 @@
 
 <div class="main-nav">
   <a id="1" class="govuk-heading-s" href="dashboard">Home</a>
-  <a id="2" class="govuk-heading-s" href="search-providers">Providers</a>
+  <a id="2" class="govuk-heading-s" href="add-new-provider">Providers</a>
   <a id="3" class="govuk-heading-s" href="manage-collections">Collections</a>
   <a id="4" class="govuk-heading-s" href="notifications">Notifications</a>
   <a id="5" class="govuk-heading-s flex" href="period-end">Period end <span class="red-dot">1</span></a>
